--- a/src/client/components/ssm/app/app.html
+++ b/src/client/components/ssm/app/app.html
@@ -1,8 +1,5 @@
 <template>
-    <ssm-header
-        onuserlogout={handleLogout}
-        onopenauthmodal={handleOpenAuthModal}
-    ></ssm-header>
+    <ssm-header onopenauthmodal={handleOpenAuthModal}></ssm-header>
 
     <ssm-authmodal></ssm-authmodal>
     <ssm-welcomemodal></ssm-welcomemodal>
