--- a/src/client/components/ssm/welcomemodal/welcomemodal.html
+++ b/src/client/components/ssm/welcomemodal/welcomemodal.html
@@ -20,7 +20,7 @@
                         aria-hidden="true"
                     >
                         <use
-                            xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
+                            xlink:href="/resources/slds/icons/utility-sprite/svg/symbols.svg#close"
                         ></use>
                     </svg>
                     <span class="slds-assistive-text">Close</span>
@@ -75,8 +75,8 @@
                                                         ></span>
                                                         <span
                                                             class="slds-form-element__label"
-                                                            >Don&#x27;t show
-                                                            this again</span
+                                                            >Don't show this
+                                                            again</span
                                                         >
                                                     </label>
                                                 </div>
