Working UI for Realms + Sandboxes
- Realms list
- Sandboxes list
- Sandboxes operations (start+stop) + pulling
- Sandboxes usage/settings/storage

--- a/src/client/components/ssm/app/app.html
+++ b/src/client/components/ssm/app/app.html
@@ -6,8 +6,8 @@
 
     <div class="slds-grid slds-gutters">
         <div class="slds-col">
-            <!-- Sandboxes list component -->
-            <ssm-sandboxes></ssm-sandboxes>
+            <!-- Realms list component -->
+            <ssm-realms></ssm-realms>
         </div>
     </div>
 
