--- a/src/client/components/ssm/realms/realms.html
+++ b/src/client/components/ssm/realms/realms.html
@@ -34,6 +34,14 @@
                             class="slds-button slds-button_neutral"
                             onclick={handleRefresh}
                         >
+                            <svg
+                                class="slds-button__icon slds-button__icon_left"
+                                aria-hidden="true"
+                            >
+                                <use
+                                    xlink:href="/resources/slds/icons/utility-sprite/svg/symbols.svg#refresh"
+                                ></use>
+                            </svg>
                             Refresh
                         </button>
                     </div>
